<resources>
    <string name="app_name">Safe Alcohol App</string>
    <string name="button">button</string>
    <string name="textField">textField</string>
    <string name="secondActivity">Drink history</string>
    <string name="title">Add title</string>
    <string name="name">Amount (dl)</string>
    <string name="addButton">Add new drink</string>
    <string name="testFieldToDelete">testFieldToDelete</string>
    <string name="thirdActivity">Third activity</string>
    <string name="android_image">Set your personal data</string>
    <string name="description_of_the_image">Description of the image</string>
    <string name="sortButton">Sort List</string>
    <string name="search">Search</string>
    <string name="searchEditText">Search</string>
    <string name="button2">Button</string>
    <string name="delete">Delete</string>
    <string name="alcohol_units">Drinking history (You can delete an item with long click)</string>
    <string name="test">TEST</string>
    <string name="expected_level">Alco level:</string>
    <string name="_0">0</string>
    <string name="readdbtest">ReadDBTest</string>
    <string name="testing_custom_time_and_date">[TESTING] Custom Time And Date</string>
    <string name="custom_date_and_time">Custom date and time</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="use_custom_datetime">Use custom DateTime</string>
    <string name="testing_userdata_from_db">[TESTING] Userdata from DB</string>
    <string name="update_db">Add new meal</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="weight">Weight (kg)</string>
    <string name="gender">Gender</string>
    <string name="height">Height (cm)</string>
    <string name="set_user_data">Set user data</string>
    <string name="what_was_your_last_drink">Add a new drink</string>
    <string name="when_was_your_last_meal">Add a new meal</string>
    <string name="snack">Snack</string>
    <string name="mid_size">Mid-size</string>
    <string name="full_meal">Full meal</string>
    <string name="meal_size">Meal size:</string>
    <string name="update_user_data">Update user data</string>
    <string name="prev"><![CDATA[< Prev]]></string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="selected_date">Selected date</string>
    <string name="test2">DATE TEST</string>
    <string name="reset">RESET</string>
    <string name="units">Units: </string>
    <string name="update_units">Update Units</string>
    <string name="dl">dl</string>
    <string name="percent">%</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="welcome_message">Welcome message</string>
    <string name="adddrinkactivity">AddDrinkActivity</string>
    <string name="a">A</string>
    <string name="beer">Beer</string>
    <string name="addmealactivity">AddMealActivity</string>
    <string name="home">Home</string>
    <string-array name="drinks_array">
        <item>Radler (2.5%)</item>
        <item>Light beer (4.2%)</item>
        <item>Regular beer (5.0%)</item>
        <item>Cider (5.0%)</item>
        <item>Strong beer (7.0%)</item>
        <item>Liquor (10%)</item>
        <item>Wine (12%)</item>
        <item>Distilled spirit (40%)</item>
        <item>Absinthe (50%)</item>
    </string-array>
    <string-array name="time_array">
        <item>Last 8 hours</item>
        <item>Last 24 hours</item>
        <item>Last 3 days</item>
    </string-array>
    <string-array name="countries">
        <item>Select your country</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Angola</item>
        <item>Argentina </item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Bahamas</item>
        <item>Belarus</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Brazil </item>
        <item>Brunei </item>
        <item>Bulgaria</item>
        <item>Cambodia</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia </item>
        <item>Comoros </item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic </item>
        <item>Denmark</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>England</item>
        <item>Equatorial Guinea </item>
        <item>Eritrea</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Polynesia</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Guatemala</item>
        <item>Guinea-Bissau </item>
        <item>Guyana</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary </item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia </item>
        <item>Iran </item>
        <item>Ireland</item>
        <item>Israel </item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kenya </item>
        <item>Kuwait </item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Libya </item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Malta</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Mongolia</item>
        <item>Morocco </item>
        <item>Namibia</item>
        <item>Nepal </item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Northern Ireland</item>
        <item>Norway</item>
        <item>Pakistan </item>
        <item>Panama</item>
        <item>Paraguay </item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Republic of Korea</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Saudi Arabia </item>
        <item>Scotland</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Singapore</item>
        <item>Slovakia </item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Suriname</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Trinidad and Tobago</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>UAE </item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>Uruguay </item>
        <item>USA</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wales</item>
        <item>Zambia</item>
    </string-array>
</resources>
