<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/what_was_your_last_drink"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="12">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6" />

            <EditText
                android:id="@+id/amountET2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/dl"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/percentET2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/percent"
                android:textColor="@android:color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <Button
            android:id="@+id/addButton2"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/addButton" />

        <View style="@style/Divider" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/radlerButton"
                    android:layout_width="1360px"
                    android:layout_height="240px"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_vertical"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/beerButton"
                    android:layout_width="1360px"
                    android:layout_height="240px"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_vertical"
                     />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/wineButton"
                    android:layout_width="1360px"
                    android:layout_height="240px"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_vertical"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/liquorButton"
                    android:layout_width="1360px"
                    android:layout_height="240px"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_vertical"
                     />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/distilledButton"
                    android:layout_width="1360px"
                    android:layout_height="240px"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_vertical"
                     />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/customButton"
                    android:layout_width="1360px"
                    android:layout_height="240px"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_vertical"
                    />
            </TableRow>
        </TableLayout>


    </LinearLayout>

</LinearLayout>